# AOC

./: README.md
2021-rust/day11/: README.md
2021-rust/day13/: Cargo.toml
2021-rust/day14/: Cargo.toml  README.md  input_data.txt
aoc_2022/: .gitignore  Cargo.toml  README.md  download_input_files.sh
aoc_2023/: Cargo.toml  README.md  download_input_files.sh
aoc_2023_ts/: .gitignore
aoc_2024/: Cargo.toml  README.md  download_input_files.sh  post_answer.sh
aoc_2025/: .gitignore  Cargo.toml  download_input_files.sh
aoc_2025/aoc_helpers/: Cargo.toml
aoc_2025/aoc_helpers/src/: point2d.rs  point3d.rs  vec.rs
aoc_2025/day1/: Cargo.toml
aoc_2025/day1/src/: lib.rs  parser.rs
aoc_2025/day10/: Cargo.toml
aoc_2025/day10/src/: lib.rs  parser.rs
aoc_2025/day11/: Cargo.toml
aoc_2025/day11/src/: lib.rs  parser.rs
aoc_2025/day12/: Cargo.toml
aoc_2025/day12/src/: lib.rs  parser.rs
aoc_2025/day2/: Cargo.toml
aoc_2025/day2/src/: lib.rs  parser.rs
aoc_2025/day3/: Cargo.toml
aoc_2025/day3/src/: lib.rs  parser.rs
aoc_2025/day4/: Cargo.toml
aoc_2025/day4/src/: lib.rs  parser.rs
aoc_2025/day5/: Cargo.toml
aoc_2025/day5/src/: ingredient_range.rs  lib.rs  parser.rs
aoc_2025/day6/: Cargo.toml
aoc_2025/day6/src/: lib.rs  operator.rs  parser.rs
aoc_2025/day7/: Cargo.toml
aoc_2025/day7/src/: lib.rs  parser.rs
aoc_2025/day8/: Cargo.toml
aoc_2025/day8/src/: lib.rs  parser.rs
aoc_2025/day9/: Cargo.toml
aoc_2025/day9/src/: lib.rs  parser.rs
aoc_2025/skeleton/src/: lib.rs  parser.rs
aoc_2025/src/: main.rs
aoc_2025_kt/: settings.gradle.kts
(+539 files in other folders)
