[package]
name = "aoc_2025"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc_helpers = { path = "aoc_helpers" }
color-eyre = "0.6.5"
day1 = { path = "day1" }
day2 = { path = "day2" }
day3 = { path = "day3" }
day4 = { path = "day4" }
day5 = { path = "day5" }
day6 = { path = "day6" }
day7 = { path = "day7" }
day8 = { path = "day8" }
day9 = { path = "day9" }
day10 = { path = "day10" }
day11 = { path = "day11" }
day12 = { path = "day12" }
