[package]
name = "day4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
peg = "0.8.5"
aoc_helpers = { path = "../aoc_helpers" }
color-eyre = "0.6.5"

[dev-dependencies]
rstest = "0.26.1"
pretty_assertions = "1.4.1"
